# powerserve-dit

./: .gitignore  .msc  .mv  CMakeLists.txt  README.md  compile.sh  run-sd.sh  run-trace.sh
app/: CMakeLists.txt
app/common/: CMakeLists.txt  cmdline-sd.cpp  cmdline-sd.hpp
app/run/: run.cpp
app/run-sd/: CMakeLists.txt  run-sd.cpp
libs/: CMakeLists.txt
libs/llama_tokenizer/: llama-vocab.cpp
src/: CMakeLists.txt
src/backend/ggml/: ggml.cpp  ggml.hpp
src/backend/qnn/: causal_models.cpp  qnn_backend.cpp
src/core/: CMakeLists.txt  config-sd.cpp  config-sd.hpp  data_type.hpp
src/encode/: CMakeLists.txt  sd_prompt_tokenizer.cpp  sd_prompt_tokenizer.hpp  sd_text_encoder_embeddings.hpp  sd_text_encoder_model_loader.cpp  sd_text_encoder_model_loader.hpp  sd_text_encoder_parity.cpp  sd_text_encoder_parity.hpp  sd_text_encoder_runner.cpp  sd_text_encoder_runner.hpp  sd_text_encoder_shape_utils.cpp  sd_text_encoder_shape_utils.hpp  sd_text_encoder_validation.cpp  sd_text_encoder_validation.hpp  sd_text_encoder_vocab_loader.cpp  sd_text_encoder_vocab_loader.hpp
src/model/internvl/: internvl_model.hpp
src/scheduler/: CMakeLists.txt  sd_scheduler.cpp  sd_scheduler.hpp
src/tokenizer/: tokenizer.cpp
src/vae/: CMakeLists.txt  sd35_vae.cpp  sd35_vae.hpp  vae.cpp  vae.hpp
tests/: CMakeLists.txt
tools/: gguf_export_sd.py
tools/gguf_config_to_json/: main.cpp
tools/qnn_converter/: build_shared_object.py  converter.py  export_to_onnx.py  graph_params.py  llama_model.py  model_params.py  soc_config.py
tools/tests/: test_gguf_export_sd.py
(+4 files in other folders)
